Memory optimization and removed jthemedetector. Will make a custom one later.